# work-timer-streamlit

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  renovate.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: streamlit-pages.instructions.md  supabase-schema.instructions.md
.github/skills/local-dev/: SKILL.md
.streamlit/: config.toml  secrets.toml.example
pages/: __init__.py  dashboard.py  history.py  login.py  report.py  set_password.py  timer.py
scripts/: python_quality_gate.sh
supabase/: config.toml
supabase/migrations/: 20260521000000_init.sql
utils/: auth.py  pdf_generator.py  supabase_client.py
