[project]
name = "work-timer-streamlit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "streamlit>=1.57.0",
    "streamlit-cookies-manager>=0.2.0",
    "supabase>=2.30.0",
]
